# faforever-tauri

./: .lintstagedrc  README.md  package.json  pnpm-lock.yaml  renovate.json
.github/workflows/: publish.yml  test-app.yml  test-code-signing.yml
app/: .env.example  .gitignore  .lintstagedrc  README.md  next.config.js  package.json  process.d.ts  tailwind.config.ts  tsconfig.json
app/app/: globals.css  page.tsx
app/app/[lng]/: layout.tsx  opengraph-image.tsx  page.tsx  providers.tsx
app/components/home/: demo-modal.tsx
app/components/layout/: footer.tsx  header.tsx  lng-dropdown.tsx  theme-dropdown.tsx
app/components/mdx/: mdx.tsx
app/components/post/: post-item.tsx
app/components/shared/: cookie-banner.tsx  modal.tsx  popover.tsx
app/constants/: index.ts
app/lib/hooks/: index.ts  use-is-tauri.ts  use-theme.ts
app/locales/: en.json  zh.json
app/messages/: en.json  zh.json
app/theme/: index.ts
docs/: .env.example  README.md  middleware.ts  next.config.js  package.json  process.d.ts  tsconfig.json
docs/app/: sitemap.ts
docs/app/[lng]/: globals.css  layout.tsx  not-found.tsx  opengraph-image.tsx  page.tsx  particles.tsx  providers.tsx
docs/components/home/: component-grid.tsx  demo-modal.tsx  github-pkg.tsx  github-release.tsx  pkg.tsx  release.tsx
docs/constants/: index.ts
docs/request/: index.ts
docs/theme/: index.ts
fixed_pkg/: makeCacheItemFromFilePath.js
linux/: com.chenyifaer.FaForever.appdata.xml
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: events.rs  main.rs  menu.rs
(+34 files in other folders)
