[package]
name = "faforever"
version = "0.0.1"
description = "A third-party music player that replaces Synology DS Audio client"
authors = ["kjxbyz"]
license = "MIT"
repository = ""
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.5.4", features = [] }

[dependencies]
tauri = { version = "1.7.2", features = [ "system-tray", "shell-open", "updater", "windows7-compat"] }
serde = { version = "1.0.209", features = ["derive"] }
serde_json = "1.0.128"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
